# OnyxSDK

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Examples/MinimalViewer/: CMakeLists.txt
Examples/MinimalViewer/Source/: HexViewer.cpp  HexViewer.h  Main.cpp  SelfTest.cpp  SelfTest.h
Include/Onyx/: Onyx.h
Include/Onyx/App/: App.h  Formatting.h  IPanel.h  InfoTab.h  PanelRegistry.h  TypeVisuals.h  UIHelpers.h  ViewerRegistry.h  Window.h  WindowDecorator.h
Include/Onyx/Audio/: AdpcmDecoder.h
Include/Onyx/Container/: ChunkReader.h  ChunkSchema.h  ChunkTree.h
Include/Onyx/Domain/: BoundingBox.h  Entry.h  IAssetProfile.h  MediaKind.h  MeshVertex.h  ProfileTag.h  Wad.h
Include/Onyx/Parsers/: AnimationData.h  MeshData.h  SceneNode.h  ScriptTargetParser.h
Include/Onyx/Rendering/: AnimationPlayer.h  AxisGizmo.h  Camera.h  GpuMesh.h  SceneRenderer.h
Include/Onyx/Schema/: AssetFormat.h  AssetNode.h  AssetReader.h  DataSchema.h  NodeInstance.h  StructDef.h
Include/Onyx/Services/: AppConfig.h  AssetDatabase.h  AssetVisibility.h  EventManager.h  Events.h  Logger.h  PathUtils.h  ProfileManager.h  RecentFiles.h  TaskManager.h
Include/Onyx/Types/: GameVersion.h  ITypeHandler.h  TypeCatalog.h  TypeRegistry.h
Include/Onyx/Vfs/: IFile.h  IVirtualFileSystem.h  IsoFileSystem.h  MemoryFile.h  OsFile.h  SliceFile.h  TransformFile.h
Include/Onyx/Viewers/: DocumentWindow.h  ImageViewer.h  TextEditorViewer.h  VideoPlayer.h  Viewport3D.h
Source/: App.cpp  App.h  UIHelpers.h
Source/Container/: ChunkReader.cpp  ChunkSchema.cpp  ChunkTree.cpp
Source/Core/: AppConfig.cpp  AppConfig.h  AssetDatabase.cpp  AssetDatabase.h  AssetVisibility.cpp  AssetVisibility.h  EventManager.h  Events.h  FontManager.cpp  FontManager.h  Logger.cpp  Metrics.cpp  Metrics.h  ProfileManager.cpp  ProfileManager.h  RecentFiles.cpp  ScaleManager.cpp  TaskManager.cpp  ThemeManager.cpp  ThemeManager.h  Threading.cpp  ToolkitApi.cpp  ToolkitApi.h
Source/Core/Audio/: AdpcmDecoder.cpp
Source/Core/Domain/: BoundingBox.h  Entry.h  MediaKind.cpp  MediaKind.h  MeshVertex.h  ProfileTag.h  Wad.h
Source/Core/Interfaces/: IGameProfile.h
Source/Core/Platform/: SystemTheme_linux.cpp  SystemTheme_macos.mm  SystemTheme_windows.cpp
Source/Core/Schema/: AssetFormat.h  AssetNode.h  AssetReader.h  DataTypes.h  NodeInstance.cpp  NodeInstance.h  StructDef.cpp  StructDef.h
Source/Core/Types/: GameVersion.h  ITypeHandler.h  TypeCatalog.cpp  TypeCatalog.h  TypeId.h  TypeRegistry.cpp  TypeRegistry.h
Source/Core/Vfs/: IVirtualFileSystem.h  IsoFile.cpp  IsoFile.h  IsoFileSystem.cpp  IsoFileSystem.h  MemoryFile.h  OsFile.cpp  OsFile.h  SliceFile.h
Source/Rendering/: AnimationPlayer.cpp  AnimationPlayer.h  AxisGizmo.cpp  AxisGizmo.h  Camera.cpp  Camera.h  GpuMesh.cpp  GpuMesh.h  GridRenderer.cpp  GridRenderer.h  SceneRenderer.cpp  SceneRenderer.h  ShaderManager.cpp  ShaderManager.h
Source/Ui/: ActiveAnimation.cpp  ActiveAnimation.h  AnimationTimeline.cpp  AnimationTimeline.h  AssetNodeRenderer.cpp  AssetNodeRenderer.h  CameraPanel.cpp  CameraPanel.h  FontDebuggerWindow.cpp  FontDebuggerWindow.h  InfoTab.cpp  InfoTab.h  IsoBrowser.cpp  IsoBrowser.h  NativeMenuBar.cpp  NativeMenuBar.h  NativeWindow.h  PakBrowser.cpp  PakBrowser.h  PanelRegistry.h  SettingsWindow.cpp  SettingsWindow.h  StatusBar.cpp  StatusBar.h  TitleBar.cpp  TitleBar.h  TypeVisuals.h  ViewerRegistry.cpp  ViewerRegistry.h  Widgets.cpp  Widgets.h  WindowDecorator.cpp
Source/Ui/Platform/: NativeWindow_linux.cpp  NativeWindow_macos.mm  NativeWindow_windows.cpp  SystemFileDialog.cpp
Source/Ui/Viewers/: AnimCurveView.cpp  AnimCurveView.h  DocumentWindow.cpp  DocumentWindow.h  Dopesheet.cpp  Dopesheet.h  IDocumentContent.h  ImageViewer.cpp  ImageViewer.h  TextEditorViewer.cpp  TextEditorViewer.h  VideoPlayer.cpp  VideoPlayer.h  Viewport3D.cpp  Viewport3D.h  WadStatsView.cpp  WadStatsView.h
Source/Vfs/: TransformFile.cpp
Source/Window/: Window.cpp  Window.h
Source/Window/Platform/: linux.cpp  macos.mm  windows.cpp
Source/core/: AppConfig.cpp  AssetDatabase.cpp  AssetVisibility.cpp  AssetVisibility.h  Events.h  FontManager.cpp  FontManager.h  Logger.h  Metrics.cpp  ProfileManager.cpp  RecentFiles.cpp  RecentFiles.h  ScaleManager.cpp  ScaleManager.h  TaskManager.cpp  TaskManager.h  Threading.cpp  Threading.h  ToolkitApi.cpp
Source/core/audio/: AdpcmDecoder.cpp  AdpcmDecoder.h
Source/core/domain/: Entry.h  MediaKind.cpp  MediaKind.h  ProfileTag.h  Wad.h
Source/core/platform/: SystemTheme.h  SystemTheme_linux.cpp  SystemTheme_macos.mm
Source/core/schema/: AssetFormat.h  AssetReader.h  DataSchema.h  NodeInstance.cpp  StructDef.h
Source/core/types/: ITypeHandler.h  TypeCatalog.cpp  TypeCatalog.h  TypeRegistry.cpp
Source/core/vfs/: IFile.h  IVirtualFileSystem.h  IsoFile.cpp  IsoFileSystem.cpp  MemoryFile.h  OsFile.cpp  OsFile.h  SliceFile.h
Source/fonts/: SFSymbols.h
Source/rendering/: AnimationPlayer.cpp  AnimationPlayer.h  AxisGizmo.cpp  AxisGizmo.h  Camera.cpp  Camera.h  GpuMesh.cpp  GpuMesh.h  GridRenderer.cpp  SceneRenderer.cpp  SceneRenderer.h  ShaderManager.cpp
Source/ui/: ActiveAnimation.cpp  ActiveAnimation.h  AnimationTimeline.cpp  AnimationTimeline.h  AssetNodeRenderer.cpp  AssetNodeRenderer.h  CameraPanel.cpp  CameraPanel.h  FontDebuggerWindow.cpp  Formatting.h  IPanel.h  InfoTab.cpp  InfoTab.h  IsoBrowser.cpp  IsoBrowser.h  NativeMenuBar.cpp  NativeMenuBar.h  NativeWindow.h  PakBrowser.cpp  PakBrowser.h  PanelRegistry.h  SettingsWindow.cpp  SettingsWindow.h  StatusBar.cpp  StatusBar.h  TitleBar.cpp  TitleBar.h  TypeVisuals.h  ViewerRegistry.cpp  ViewerRegistry.h  Widgets.cpp  WindowDecorator.cpp  WindowDecorator.h
Source/ui/platform/: NativeWindow_linux.cpp  NativeWindow_macos.mm  (+3 more)
Source/window/: Window.cpp  Window.h
Tests/: CMakeLists.txt  appconfig_test.cpp  container_chunkreader_test.cpp  container_chunkschema_test.cpp  container_chunktree_test.cpp  logger_test.cpp  metrics_test.cpp  sanity_test.cpp  theme_contrast_test.cpp  threading_test.cpp  vfs_transformfile_test.cpp
(+43 files in other folders)
